Fixes tooltip overflow

--- a/src/components/tooltip/styles.scss
+++ b/src/components/tooltip/styles.scss
@@ -368,7 +368,8 @@
         font-size: $font-size-small;
         min-height: auto;
 				max-height: 400px;
-				overflow: auto;
+        overflow-y: auto;
+        overflow-x: hidden;
       }
 
       &.rc-tooltip-placement-top .rc-tooltip-arrow {
